objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Client Surveys Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Dev Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IT Tickets</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Admin_Testing_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Testing Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Stakeholder_Concerns_Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Stakeholder Concerns Resolved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_Stakeholder_Concerns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any Stakeholder Concerns?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_Impacted_Stakeholders_Aware__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are Impacted Stakeholders Aware?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_Other_Stakeholders_Impacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are Other Stakeholders Impacted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Requirements__c</fullName>
        <label>Business Requirements</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confidential?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Morocco</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Pakistan</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>Republic of Ireland</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia</fullName>
                </value>
                <value>
                    <fullName>Scotland</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Describe_The_Testing__c</fullName>
        <label>Describe The Testing</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dev_Backlog_When_Can_Work_Start__c</fullName>
        <label>Dev Backlog (When Can Work Start)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate Action</fullName>
                </value>
                <value>
                    <fullName>Within 1 Week</fullName>
                </value>
                <value>
                    <fullName>Within 2 Weeks</fullName>
                </value>
                <value>
                    <fullName>Within 1 Month</fullName>
                </value>
                <value>
                    <fullName>Within 3 Months</fullName>
                </value>
                <value>
                    <fullName>Beyond 3 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dev_Level_Of_Effort__c</fullName>
        <label>Dev Level Of Effort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Low</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5  - High</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impacted_Stakeholders__c</fullName>
        <label>Impacted Stakeholders</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>List_Stakeholder_Concerns__c</fullName>
        <label>List Stakeholder Concerns</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>New_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Process?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <label>Office Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Broomfield, CO</fullName>
                </value>
                <value>
                    <fullName>Austin, TX</fullName>
                </value>
                <value>
                    <fullName>Minneapolis, MN</fullName>
                </value>
                <value>
                    <fullName>San Francisco, CA</fullName>
                </value>
                <value>
                    <fullName>Old Saybrook, CT</fullName>
                </value>
                <value>
                    <fullName>Montreal, Quebec, Canada</fullName>
                </value>
                <value>
                    <fullName>Oakville, Ontario, Canada</fullName>
                </value>
                <value>
                    <fullName>Santiago, Chile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Document_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Document Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Document_Link__c</fullName>
        <label>Process Document Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Project_Development__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Development</label>
        <referenceTo>RES_Projects__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RES_Ticket_Logging__c</fullName>
        <label>RES Ticket Logging</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_For_Request__c</fullName>
        <label>Reason For Request</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collateral Creation (flyer, case studies, white papers, etc.)</fullName>
                </value>
                <value>
                    <fullName>Logo</fullName>
                </value>
                <value>
                    <fullName>E-mail Campaign</fullName>
                </value>
                <value>
                    <fullName>Presentation Support</fullName>
                </value>
                <value>
                    <fullName>Salesforce.com Support</fullName>
                </value>
                <value>
                    <fullName>Event Support</fullName>
                </value>
                <value>
                    <fullName>RFP/Proposal Support</fullName>
                </value>
                <value>
                    <fullName>Videos</fullName>
                </value>
                <value>
                    <fullName>Promotional Items</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestors_Team__c</fullName>
        <label>Requestor&apos;s Team</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Safety_Issues__c</fullName>
        <label>Safety Issues</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Team_Impact_Sign_Off__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Team Impact Sign-Off</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Team_Recommendation__c</fullName>
        <label>Service Team Recommendation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Service_Team_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Team Release</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ServiceTeamRelease</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Change_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard Change?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Requirements__c</fullName>
        <label>Technical Requirements</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>User_Testing_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Testing Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Training_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Training Completed?</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Dev_Request</fullName>
        <active>true</active>
        <businessProcess>Dev Request</businessProcess>
        <label>Dev Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>old</fullName>
        <active>true</active>
        <businessProcess>IT Tickets</businessProcess>
        <label>N/A</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>